# dffmpeg

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE
apps/controller/: BUILD.bazel  go.mod  go.sum  main.go
apps/controller/cmd/: BUILD.bazel
apps/controller/handler/: BUILD.bazel  create.go
apps/worker/: .bazelrc  BUILD.bazel  Cargo.toml
apps/worker/src/: main.rs
