load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "app",
    embed = [":cmd_lib"],
    importpath = "apps/controller",
    visibility = ["//visibility:public"],
)

go_library(
    name = "cmd_lib",
    srcs = ["src/main.go"],
    importpath = "apps/controller",
    visibility = ["//visibility:private"],
)
